<resources>
    <string name="app_name">YogaApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_password_min">Password (min 6 digits)</string>
    <string name="label_login">Login</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="label_login_with">Login with</string>
    <string name="label_google">Google</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_name">Name</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_age">Age</string>
    <string name="label_gender">Gender</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_settings">Settings</string>
    <string name="label_home">Home</string>
    <string name="label_more">More</string>
    <string name="label_courses">Courses</string>
    <string name="label_transaction">Transaction</string>
    <string name="label_logout">Logout</string>
    <string name="about_course">About Course</string>
    <string name="sample_desc">Awesome!! phone looks so good and display is very nice it worth the money. After all you can not get more than this in this price range. Camera is very good in sunlight and face also works good.. In last just go for it.</string>
    <string name="label_add_fav">Add to Favourite</string>
    <string name="course_videos">Course Videos</string>
    <string name="play_btn">Play</string>

    <string name="label_health_disorder">Health Disorder</string>
    <string name="label_profession">Profession</string>
    <string name="label_testimonials_n_videos">Testimonials \n videos</string>
    <string name="label_yoga_n_poses">Yoga \n Poses</string>
    <string name="label_begginer_n_video">Beginner \n video</string>
    <string name="label_daily_quotes">Daily Quotes</string>
    <string name="label_daily_tasks">Daily Tasks</string>
    <string name="label_benefits_of_yoga">Benefits of Yoga</string>
    <string name="start_now">Start Now</string>
    <string name="about_courses">About</string>
    <string name="morning_yoga">Morning yoga</string>
    <string name="testimonials_n_videos">Testimonials   videos</string>
    <string name="label_invite_friend">Invite Friend</string>
    <string name="label_invite_friends">Invite Friends</string>
    <string name="label_invite_friends_to_yoga">Invite Friends to Yoga</string>
    <string name="label_your_referral_code">Your Referral code</string>
    <string name="label_update">Update</string>

    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="label_something">Something went wrong</string>
    <string name="label_internet">Check your internet connection</string>


    <string-array name="menu_items">
        <item>Profile</item>
        <!-- <item>Exercises</item>-->
        <item>E-wallet</item>
        <item>Favourites</item>
        <item>Invite Friends</item>
        <item>Rate Us</item>
        <item>About</item>
        <item>Feedback</item>
        <item>FAQ</item>
        <item>Logout</item>
    </string-array>
</resources>
