<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/grey">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/margin_5"
            android:padding="@dimen/margin_10"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/title_txt"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/label_courses" />

    </LinearLayout>

    <ImageView
        android:id="@+id/course_banner_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <TextView
            style="@style/sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_courses" />

        <TextView
            android:id="@+id/course_about_course_txt"
            style="@style/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sample_desc" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_course_video_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@color/common_bg_color"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>
</LinearLayout>