<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_20">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_text_input"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:hint="@string/label_email_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_text_input"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/fragment_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/label_login"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font_14" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_10"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/label_forgot_password"
                android:textColor="@color/login_forgot_text"
                android:textSize="@dimen/font_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_10"
                android:padding="@dimen/margin_10"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_weight="1"
                    android:background="@color/dark_grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/gilroy_regular"
                    android:gravity="center"
                    android:text="@string/label_login_with" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:layout_weight="1"
                    android:background="@color/dark_grey" />

            </LinearLayout>

            <LinearLayout
                style="@style/margin_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/margin_16"
                android:weightSum="2">

                <Button
                    android:id="@+id/login_facebook_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_spinner"
                    android:drawableStart="@drawable/ic_facebook"
                    android:drawablePadding="@dimen/margin_10"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/label_facebook"
                    android:textColor="@color/slate_blue"
                    android:textSize="@dimen/font_14" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/margin_10"
                    android:layout_weight="1"
                    android:padding="@dimen/margin_10"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/login_google_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_spinner"
                    android:drawableStart="@drawable/ic_google"
                    android:drawablePadding="@dimen/margin_10"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/label_google"
                    android:textColor="@color/slate_blue"
                    android:textSize="@dimen/font_14" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>