<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_20">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_name_text_input"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/signup_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:hint="@string/label_name"
                    android:inputType="textPersonName"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_text_input"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:hint="@string/label_email_address"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_phone_text_input"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:hint="@string/label_phone_number"
                    android:inputType="phone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_age_text_input"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:layout_weight="0.7">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_age_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_regular"
                        android:hint="@string/label_age"
                        android:inputType="number"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_gender_text_input"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    android:layout_weight="1.3">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_gender_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_regular"
                        android:hint="@string/label_gender"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_text_input"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/fragment_otp_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/label_sign_up"
                android:textColor="@color/yellow"
                android:textSize="@dimen/font_16"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>