<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".fragment.InviteFriendFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/label_invite_friends_to_yoga"
                android:textSize="@dimen/font_20" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_20"
                android:src="@drawable/ic_giftbox" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/label_your_referral_code"
                android:textSize="@dimen/font_20" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_5"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/invite_referral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_20"
                        android:fontFamily="@font/gilroy_bold"
                        android:gravity="center"
                        android:text=""
                        android:textSize="@dimen/font_26" />

                    <Button
                        android:id="@+id/fragment_invite_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_20"
                        android:background="@drawable/bg_login_btn"
                        android:fontFamily="@font/gilroy_bold"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/label_invite_friends"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_14" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>