<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CourseActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/common_bg_color">

            <ImageView
                android:id="@+id/course_banner_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/banner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_16">

                <TextView
                    style="@style/sub_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/about_course" />

                <TextView
                    android:id="@+id/course_about_course_txt"
                    style="@style/desc_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sample_desc" />

                <LinearLayout
                    android:id="@+id/course_add_to_fav_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:background="@drawable/bg_login_btn"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/course_fav_icn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_favorite"
                        android:tint="@color/white" />

                    <TextView
                        android:id="@+id/course_fav_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gilroy_bold"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="10dp"
                        android:text="@string/label_add_fav"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_16" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/course_trail_video_lay"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/image_bg"
                        android:scaleType="centerCrop"
                        android:src="@drawable/beginer" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_exo_play"
                        android:tint="@color/white" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/course_title"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Title" />

                <TextView
                    android:id="@+id/course_category"
                    style="@style/light_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Women" />

                <TextView
                    style="@style/sub_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/course_videos" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/course_video_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/common_bg_color"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/margin_5"
        android:padding="@dimen/margin_10"
        android:src="@drawable/ic_back_arrow" />

</RelativeLayout>